# qmd-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix  install.sh  package.json
.github/workflows/: README.md  ci.yml  release.yml
homebrew-tap/: README.md
homebrew-tap/Formula/: qmd.rb
original-ts/: README.md
scripts/: verify-release.sh
skills/qmd/: SKILL.md
src/: collections.ts  lib.rs  llm.ts  main.rs  store.ts
src/bench/: bench.ts
src/cli/: args.rs  mod.rs  qmd.ts
src/cli/commands/: bench.rs  cleanup.rs  collection.rs  context.rs  embed.rs  get.rs  init.rs  ls.rs  mcp.rs  mod.rs  multi_get.rs  query.rs  search.rs  skill.rs  status.rs  update.rs
src/db/: mod.rs  search.rs
src/embed/: llama.rs  mod.rs
src/index/: mod.rs
src/utils/: error.rs  mod.rs
test/: bin-wrapper.test.ts  cli.test.ts  llm.test.ts  local-config.test.ts  package.test.ts  store.test.ts
wiki/: index.md  log.md  schema.md
wiki/concepts/: README.md  llm-wiki-for-search-tools.md  rust-for-python-node-developers.md
wiki/decisions/: 2026-05-next-parity-phases.md  README.md
wiki/experiments/: README.md
wiki/runbooks/: README.md  release.md  rust-development.md
wiki/sources/: llm-wiki.md
wix/: main.wxs
