[package]
name = "qmd"
version = "0.1.0"
edition = "2021"
description = "Query Markup Documents - secure Rust port of the on-device hybrid search engine"
license = "MIT"
repository = "https://github.com/simonellefsen/qmd-rust"
authors = ["QMD contributors (Rust port)"]

[[bin]]
name = "qmd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }  # bundled for FTS5 reliability; later switch to system + vec extension load
# More deps added incrementally: sqlite-vec loader, llama-cpp-*, tree-sitter-*, etc.

[dev-dependencies]
# testing crates later

[profile.release]
lto = true
codegen-units = 1
strip = true
