[package]
name = "qmd"
version = "0.5.2"
edition = "2021"
description = "Query Markup Documents - secure Rust port of the on-device hybrid search engine"
license = "MIT"
repository = "https://github.com/simonellefsen/qmd-rust"
homepage = "https://github.com/simonellefsen/qmd-rust"
authors = ["QMD contributors (Rust port)"]

[package.metadata.wix]
upgrade-guid = "72157046-B8D8-4576-BF9A-F625877CEDE8"
path-guid = "BE863F5F-C026-46FC-A18D-7DBD10BBFC5D"
license = false
eula = false

[[bin]]
name = "qmd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }  # bundled for FTS5 reliability; later switch to system + vec extension load
walkdir = "2.5"
globset = "0.4"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
# More deps added incrementally: sqlite-vec loader, llama-cpp-*, tree-sitter-*, etc.

[dependencies.llama-cpp-2]
version = "0.1"
optional = true
features = ["metal"]

[features]
llama-embed = ["dep:llama-cpp-2"]

[dev-dependencies]
# testing crates later

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
